--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
-fasthtml
+# No external dependencies required!
+# This app uses only Python's built-in libraries:
+# - http.server
+# - json
+# - webbrowser
+# - threading
+
+# If you want to use the FastHTML version (app.py), install:
+# python-fasthtml
